--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Full Sail University - Web Design and Development Final Project Showcase</title>
+        <link rel="stylesheet" type="text/css" href="css/reset.css" />
+        <link rel="stylesheet" type="text/css" href="css/base.css" />
     </head>
     <body>
 
@@ -54,7 +56,7 @@
                 </div>
             </section>
             <div>
-                <!---  Insert ideas for student presentation archives --->
+                <!---  Insert ideas for student presentation archives -->
             </div>
         </div>
 
